POWR-284 figured out how to override fonts in Sass.

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -4,14 +4,18 @@ Description: Bootstrap 4 with Sass
 */
 /* IMPORTS */
 /* VARIABLES */
+/* TYPOGRAPHY */
+/* Google Fonts */
+@import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,300italic,400italic");
+@import url("//fonts.googleapis.com/css?family=Merriweather:400,700");
+/* Font Awesome Icons */
+@import url("//use.fontawesome.com/releases/v5.0.13/css/all.css");
 /*!
  * Bootstrap v4.0.0 (https://getbootstrap.com)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,300italic,400italic");
-@import url("fonts.googleapis.com/css?family=Merriweather:400,700");
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -39,8 +43,8 @@ Description: Bootstrap 4 with Sass
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
+  --font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family-monospace: Menlo, Monaco, Consolas, "Courier New", monospace; }
 
 *,
 *::before,
@@ -63,10 +67,10 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.42857;
   color: #212529;
   text-align: left;
   background-color: #fff; }
@@ -307,9 +311,9 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: inherit;
+  font-family: "Merriweather", Georgia, "Times New Roman", Times, serif;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.1;
   color: inherit; }
 
 h1, .h1 {
@@ -337,22 +341,22 @@ h6, .h6 {
 .display-1 {
   font-size: 6rem;
   font-weight: 300;
-  line-height: 1.2; }
+  line-height: 1.1; }
 
 .display-2 {
   font-size: 5.5rem;
   font-weight: 300;
-  line-height: 1.2; }
+  line-height: 1.1; }
 
 .display-3 {
   font-size: 4.5rem;
   font-weight: 300;
-  line-height: 1.2; }
+  line-height: 1.1; }
 
 .display-4 {
   font-size: 3.5rem;
   font-weight: 300;
-  line-height: 1.2; }
+  line-height: 1.1; }
 
 hr {
   margin-top: 1rem;
@@ -425,7 +429,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace; }
 
 code {
   font-size: 87.5%;
@@ -1260,7 +1264,7 @@ pre {
   width: 100%;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
-  line-height: 1.5;
+  line-height: 1.42857;
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
@@ -1284,7 +1288,7 @@ pre {
     opacity: 1; }
 
 select.form-control:not([size]):not([multiple]) {
-  height: calc(2.25rem + 2px); }
+  height: calc(2.17857rem + 2px); }
 
 select.form-control:focus::-ms-value {
   color: #495057;
@@ -1300,7 +1304,7 @@ select.form-control:focus::-ms-value {
   padding-bottom: calc(0.375rem + 1px);
   margin-bottom: 0;
   font-size: inherit;
-  line-height: 1.5; }
+  line-height: 1.42857; }
 
 .col-form-label-lg {
   padding-top: calc(0.5rem + 1px);
@@ -1320,7 +1324,7 @@ select.form-control:focus::-ms-value {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   margin-bottom: 0;
-  line-height: 1.5;
+  line-height: 1.42857;
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0; }
@@ -1620,7 +1624,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
-  line-height: 1.5;
+  line-height: 1.42857;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
   .btn:hover, .btn:focus {
@@ -2390,7 +2394,7 @@ tbody.collapse.show {
   margin-bottom: 0;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.42857;
   color: #495057;
   text-align: center;
   white-space: nowrap;
@@ -2422,7 +2426,7 @@ tbody.collapse.show {
 .custom-control {
   position: relative;
   display: block;
-  min-height: 1.5rem;
+  min-height: 1.42857rem;
   padding-left: 1.5rem; }
 
 .custom-control-inline {
@@ -2450,7 +2454,7 @@ tbody.collapse.show {
   margin-bottom: 0; }
   .custom-control-label::before {
     position: absolute;
-    top: 0.25rem;
+    top: 0.21429rem;
     left: 0;
     display: block;
     width: 1rem;
@@ -2461,7 +2465,7 @@ tbody.collapse.show {
     background-color: #dee2e6; }
   .custom-control-label::after {
     position: absolute;
-    top: 0.25rem;
+    top: 0.21429rem;
     left: 0;
     display: block;
     width: 1rem;
@@ -2507,9 +2511,9 @@ tbody.collapse.show {
 .custom-select {
   display: inline-block;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: calc(2.17857rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
-  line-height: 1.5;
+  line-height: 1.42857;
   color: #495057;
   vertical-align: middle;
   background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
@@ -2550,14 +2554,14 @@ tbody.collapse.show {
   position: relative;
   display: inline-block;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: calc(2.17857rem + 2px);
   margin-bottom: 0; }
 
 .custom-file-input {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: calc(2.17857rem + 2px);
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-control {
@@ -2574,9 +2578,9 @@ tbody.collapse.show {
   right: 0;
   left: 0;
   z-index: 1;
-  height: calc(2.25rem + 2px);
+  height: calc(2.17857rem + 2px);
   padding: 0.375rem 0.75rem;
-  line-height: 1.5;
+  line-height: 1.42857;
   color: #495057;
   background-color: #fff;
   border: 1px solid #ced4da;
@@ -2588,9 +2592,9 @@ tbody.collapse.show {
     bottom: 0;
     z-index: 3;
     display: block;
-    height: calc(calc(2.25rem + 2px) - 1px * 2);
+    height: calc(calc(2.17857rem + 2px) - 1px * 2);
     padding: 0.375rem 0.75rem;
-    line-height: 1.5;
+    line-height: 1.42857;
     color: #495057;
     content: "Browse";
     background-color: #e9ecef;
@@ -2675,8 +2679,8 @@ tbody.collapse.show {
 
 .navbar-brand {
   display: inline-block;
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
+  padding-top: 0.32143rem;
+  padding-bottom: 0.32143rem;
   margin-right: 1rem;
   font-size: 1.25rem;
   line-height: inherit;
@@ -3684,7 +3688,7 @@ button.close {
 
 .modal-title {
   margin-bottom: 0;
-  line-height: 1.5; }
+  line-height: 1.42857; }
 
 .modal-body {
   position: relative;
@@ -3727,10 +3731,10 @@ button.close {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.42857;
   text-align: left;
   text-align: start;
   text-decoration: none;
@@ -3812,10 +3816,10 @@ button.close {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.42857;
   text-align: left;
   text-align: start;
   text-decoration: none;
@@ -6588,9 +6592,9 @@ summary {
   display: inline-block;
   background-image: url(../../images/required.svg);
   background-repeat: no-repeat;
-  background-size: calc(2.25rem + 2px)/2 calc(2.25rem + 2px)/2;
-  width: calc(2.25rem + 2px)/2;
-  height: calc(2.25rem + 2px)/2;
+  background-size: calc(2.17857rem + 2px)/2 calc(2.17857rem + 2px)/2;
+  width: calc(2.17857rem + 2px)/2;
+  height: calc(2.17857rem + 2px)/2;
   margin: 0 0.3em; }
 
 /* ------------------ Header ------------------ */
@@ -6753,7 +6757,7 @@ summary {
 .node--view-mode-teaser .node__content {
   clear: none;
   font-size: 1rem;
-  line-height: 1.5; }
+  line-height: 1.42857; }
 
 /* Node metadata styles. */
 .node__meta {
@@ -6918,7 +6922,7 @@ header #search-block-form {
   padding-bottom: 5px;
   text-shadow: 0 1px 0 #fff;
   font-size: 1.25rem;
-  line-height: 1.2; }
+  line-height: 1.1; }
 
 .sidebar tbody {
   border: none; }
@@ -7291,8 +7295,6 @@ nav.tabs {
 .views-ui-display-tab-actions .dropbutton .form-submit:focus {
   color: #418fde; }
 
-/* TYPOGRAPHY */
-/* Google Fonts */
 /* MIXINS */
 .btn-primary a {
   color: #fff;
