--- a/web/themes/custom/cloudy/scss/typography.scss
+++ b/web/themes/custom/cloudy/scss/typography.scss
@@ -1,9 +1,11 @@
 /* TYPOGRAPHY */
 
 /* Google Fonts */
+@import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,300italic,400italic");
+@import url("//fonts.googleapis.com/css?family=Merriweather:400,700");
 
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,300italic,400italic");
-@import url("fonts.googleapis.com/css?family=Merriweather:400,700");
+/* Font Awesome Icons */
+@import url("//use.fontawesome.com/releases/v5.0.13/css/all.css");
 
 //** Font, line-height, and color for body text, headings, and more.
 $font-family-sans-serif:  "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
@@ -14,7 +16,7 @@ $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !def
 
 $font-family-base:        $font-family-sans-serif !default;
 
-$font-size-base:          21px !default;
+$font-size-base:          1rem !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default;
 $font-size-small:         ceil(($font-size-base * 0.85)) !default;
 
