POWR-284 add logo and apply sizing.

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -149,12 +149,12 @@ sup {
   top: -.5em; }
 
 a {
-  color: #418fde;
+  color: #1B5998;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #2170c0;
+    color: #174c82;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -2013,10 +2013,10 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #418fde;
+  color: #1B5998;
   background-color: transparent; }
   .btn-link:hover {
-    color: #2170c0;
+    color: #174c82;
     text-decoration: underline;
     background-color: transparent;
     border-color: transparent; }
@@ -3158,11 +3158,11 @@ tbody.collapse.show {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #418fde;
+  color: #1B5998;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:hover {
-    color: #2170c0;
+    color: #174c82;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6; }
@@ -6065,13 +6065,6 @@ a.text-dark:hover, a.text-dark:focus {
  * @file
  * Visual styles for comments in Barrio.
  */
-.alert {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  z-index: 9999; }
-
 /**
  * @file
  * Bootstrap Barrio specific styling for the Book module.
@@ -6268,7 +6261,7 @@ a.text-dark:hover, a.text-dark:focus {
   /* LTR */
   padding: 5px 2px 5px 5px;
   /* LTR */
-  background: #e2eefa; }
+  background: white; }
 
 [dir="rtl"] .comment--unpublished {
   margin-left: 5px;
@@ -6280,8 +6273,8 @@ a.text-dark:hover, a.text-dark:focus {
  * change this to .comment--unpublished.
  */
 .unpublished .comment-text .comment-arrow {
-  border-left: 1px solid #e2eefa;
-  border-right: 1px solid #e2eefa; }
+  border-left: 1px solid white;
+  border-right: 1px solid white; }
 
 .unpublished {
   padding: 1.25em 1.25em 0; }
@@ -6291,12 +6284,12 @@ a.text-dark:hover, a.text-dark:focus {
 
 .comment--unpublished .comment__text:after,
 .node--unpublished .comment__text:after {
-  border-right-color: #e2eefa;
+  border-right-color: white;
   /* LTR */ }
 
 [dir="rtl"] .comment--unpublished .comment__content:after,
 [dir="rtl"] .node--unpublished .comment__content:after {
-  border-left-color: #e2eefa; }
+  border-left-color: white; }
 
 /**
  * @file
@@ -7274,7 +7267,7 @@ nav.tabs {
 
 .views-displays .tabs .open > a:hover,
 .views-displays .tabs .open > a:focus {
-  color: #418fde; }
+  color: #1B5998; }
 
 .views-displays .secondary .form-submit {
   font-size: 0.875rem; }
@@ -7289,11 +7282,11 @@ nav.tabs {
 
 /* Views action dropbutton styles */
 .views-ui-display-tab-actions .dropbutton .form-submit {
-  color: #2170c0; }
+  color: #174c82; }
 
 .views-ui-display-tab-actions .dropbutton .form-submit:hover,
 .views-ui-display-tab-actions .dropbutton .form-submit:focus {
-  color: #418fde; }
+  color: #1B5998; }
 
 /* MIXINS */
 .btn-primary a {
@@ -7672,7 +7665,7 @@ body {
 /* COLORS 
 --------------------------------------------------*/
 a {
-  color: #418fde; }
+  color: #1B5998; }
 
 .bg-inverse {
   background: #046a38 !important; }
@@ -7681,7 +7674,7 @@ a {
   background: #f8f9fa !important; }
 
 .menu--main li a {
-  color: #046a38; }
+  color: white; }
 
 .menu--account li a {
   color: #046a38; }
@@ -7702,3 +7695,6 @@ a {
 
 .slick > div {
   margin: 0 15px; }
+
+.navbar .navbar-brand img {
+  max-height: 50px; }
