--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -18,7 +18,7 @@ body {
 --------------------------------------------------*/
 
 a {
-    color: $accent-shade;
+    color: $link-color;
 }
 
 .bg-inverse {
@@ -30,7 +30,7 @@ a {
 }
 
 .menu--main li a {
-    color: $primary-shade;
+    color: $primary-light;
 }
 
 .menu--account li a {
@@ -57,4 +57,8 @@ a {
 
 .slick>div {
     margin: 0 15px;
+}
+
+.navbar .navbar-brand img {
+    max-height: 50px;
 }
