--- a/web/themes/custom/cloudy/scss/variables.scss
+++ b/web/themes/custom/cloudy/scss/variables.scss
@@ -2,10 +2,10 @@
 
 // colors
 $primary-shade: #046a38;
-$primary-light: lighten($primary-shade, 37%);
+$primary-light: lighten($primary-shade, 80%);
 $primary-dark: darken($primary-shade, 12%);
 $accent-shade: #418fde;
-$accent-light: lighten($accent-shade, 37%);
+$accent-light: lighten($accent-shade, 80%);
 $accent-dark: darken($accent-shade, 12%);
 // Reassign color vars to semantic color scheme
 $red: #dc3545;
@@ -31,9 +31,9 @@ $inverse-bg: $primary-shade;
 // Links
 //
 // Style anchor elements.
-$link-color: $accent-shade;
+$link-color: #1B5998;
 $link-decoration: none;
-$link-hover-color: $accent-dark;
+$link-hover-color: darken($link-color, 5%);
 $link-hover-decoration: underline;
 // Comments
 $comment-spacer-x: 1.25em;
