POWR-284 clean up bootstrap_sass settings file.

--- a/web/themes/custom/cloudy/css/groups.css
+++ b/web/themes/custom/cloudy/css/groups.css
@@ -24,8 +24,8 @@
 }
 
 .banner {
-  background-color: #f8f9fa;
-  color: #505050;
+  background-color: #505050;
+  color: #f8f9fa;
   min-height: 70px;
 }
 
