--- a/web/themes/custom/cloudy/scss/typography.scss
+++ b/web/themes/custom/cloudy/scss/typography.scss
@@ -16,19 +16,22 @@ $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !def
 
 $font-family-base:        $font-family-sans-serif !default;
 
-$font-size-base:          1rem !default;
-$font-size-large:         ceil(($font-size-base * 1.25)) !default;
-$font-size-small:         ceil(($font-size-base * 0.85)) !default;
+$font-size-base:          1.125rem !default;
 
-$font-size-h1:            floor(($font-size-base * 2.6)) !default;
-$font-size-h2:            floor(($font-size-base * 2.15)) !default;
-$font-size-h3:            ceil(($font-size-base * 1.7)) !default;
-$font-size-h4:            ceil(($font-size-base * 1.25)) !default;
+
+$font-size-h6:            calc($font-size-base / 1.125) !default;
 $font-size-h5:            $font-size-base !default;
-$font-size-h6:            ceil(($font-size-base * 0.85)) !default;
+$font-size-h4:            calc($font-size-base * 1.125) !default;
+$font-size-h3:            calc($font-size-h4 * 1.125) !default;
+$font-size-h2:            calc($font-size-h3 * 1.125) !default;
+$font-size-h1:            calc($font-size-h2 * 1.125) !default;
+$font-size-large:         calc($font-size-base * 1.125) !default;
+$font-size-small:         calc($font-size-base * 0.85) !default;
+
+
 
 //** Unit-less `line-height` for use in components like buttons.
-$line-height-base:        1.428571429 !default;
+$line-height-base:        1.5 !default;
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 $line-height-computed:    floor(($font-size-base * $line-height-base)) !default;
 
