POWR-284 add header accent borders

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6623,6 +6623,10 @@ summary {
     margin-left: 0;
     float: none; } }
 
+.header {
+  border-top: 3px #418fde solid;
+  border-bottom: 3px #ffb81c solid; }
+
 /**
  * @file
  * Styles for the help block.
