POWR-284 modify branding block

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -9,7 +9,7 @@ Description: Bootstrap 4 with Sass
 @import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,300italic,400italic");
 @import url("//fonts.googleapis.com/css?family=Merriweather:400,700");
 /* Font Awesome Icons */
-@import url("//use.fontawesome.com/releases/v5.0.13/css/all.css");
+@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
 /*!
  * Bootstrap v4.0.0 (https://getbootstrap.com)
  * Copyright 2011-2018 The Bootstrap Authors
@@ -6624,6 +6624,7 @@ summary {
     float: none; } }
 
 .header {
+  background-color: #046a38;
   border-top: 3px #418fde solid;
   border-bottom: 3px #ffb81c solid; }
 
