--- a/web/themes/custom/cloudy/scss/components/header.scss
+++ b/web/themes/custom/cloudy/scss/components/header.scss
@@ -43,6 +43,7 @@
 }
 
 .header {
+    background-color: $primary-shade;
     border-top: 3px $accent-shade solid; 
     border-bottom: 3px $yellow solid;
 }
