--- a/web/themes/custom/cloudy/templates/block/block--system-branding-block.html.twig
+++ b/web/themes/custom/cloudy/templates/block/block--system-branding-block.html.twig
@@ -14,9 +14,9 @@
 #}
 {% set attributes = attributes.addClass('site-branding') %}
   {% if site_logo or site_name %}
-    <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home" class="navbar-brand">
+    <a href="{{ path('<front>') }}" title="{{ 'Go to the homepage of the City of Portland Oregon'|t }}" rel="home" class="navbar-brand">
       {% if site_logo %}
-        <img src="{{ site_logo }}" alt="{{ 'Home'|t }}" class="img-fluid d-inline-block align-top" />
+        <img src="{{ site_logo }}" alt="{{ 'Portland Oregon'|t }}" class="img-fluid d-inline-block align-top" />
       {% endif %}
       {{ site_name }}
     </a>
