--- a/web/themes/custom/cloudy/css/groups.css
+++ b/web/themes/custom/cloudy/css/groups.css
@@ -33,3 +33,9 @@
   background-color: #FF8226;
   color: white;
 }
+
+.transportation .header {
+  background-color: #505050;
+  color: #f8f9fa;
+  border: 0px #505050 solid;
+}
