POWR-289 Initial commit of changes to homepage layout and views

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -9,7 +9,7 @@ Description: Bootstrap 4 with Sass
 @import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,300italic,400italic");
 @import url("//fonts.googleapis.com/css?family=Merriweather:400,700");
 /* Font Awesome Icons */
-@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
+@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 /*!
  * Bootstrap v4.0.0 (https://getbootstrap.com)
  * Copyright 2011-2018 The Bootstrap Authors
@@ -149,12 +149,12 @@ sup {
   top: -.5em; }
 
 a {
-  color: #1B5998;
+  color: #1b5a99;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #174c82;
+    color: #174d84;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -2013,10 +2013,10 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #1B5998;
+  color: #1b5a99;
   background-color: transparent; }
   .btn-link:hover {
-    color: #174c82;
+    color: #174d84;
     text-decoration: underline;
     background-color: transparent;
     border-color: transparent; }
@@ -3158,11 +3158,11 @@ tbody.collapse.show {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #1B5998;
+  color: #1b5a99;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:hover {
-    color: #174c82;
+    color: #174d84;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6; }
@@ -7272,7 +7272,7 @@ nav.tabs {
 
 .views-displays .tabs .open > a:hover,
 .views-displays .tabs .open > a:focus {
-  color: #1B5998; }
+  color: #1b5a99; }
 
 .views-displays .secondary .form-submit {
   font-size: 0.98438rem; }
@@ -7287,11 +7287,11 @@ nav.tabs {
 
 /* Views action dropbutton styles */
 .views-ui-display-tab-actions .dropbutton .form-submit {
-  color: #174c82; }
+  color: #174d84; }
 
 .views-ui-display-tab-actions .dropbutton .form-submit:hover,
 .views-ui-display-tab-actions .dropbutton .form-submit:focus {
-  color: #1B5998; }
+  color: #1b5a99; }
 
 /* MIXINS */
 .btn-primary a {
@@ -7670,7 +7670,7 @@ body {
 /* COLORS 
 --------------------------------------------------*/
 a {
-  color: #1B5998; }
+  color: #1b5a99; }
 
 .bg-inverse {
   background: #046a38 !important; }
@@ -7703,3 +7703,19 @@ a {
 
 .navbar .navbar-brand img {
   max-height: 50px; }
+
+.cloudy-homepage h3 {
+  font-size: 1.3rem; }
+
+.fas:before {
+  font-family: FontAwesome;
+  padding-right: .5rem;
+  vertical-align: middle; }
+
+.community-action .fas:before,
+.audience .fas:before {
+  font-size: 2rem;
+  color: #6c757d; }
+
+.audience a, .community-action a {
+  color: #1b5a99; }
