--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -62,3 +62,23 @@ a {
 .navbar .navbar-brand img {
     max-height: 50px;
 }
+
+.cloudy-homepage h3 {
+    font-size: 1.3rem;
+}
+
+.fas:before {
+    font-family: FontAwesome;
+    padding-right: .5rem;
+    vertical-align: middle;
+}
+
+.community-action .fas:before, 
+.audience .fas:before {
+    font-size: 2rem;
+    color: $gray-600;
+}
+
+.audience a, .community-action a {
+    color: $link-color;
+}
