--- a/web/themes/custom/cloudy/scss/variables.scss
+++ b/web/themes/custom/cloudy/scss/variables.scss
@@ -6,7 +6,7 @@ $primary-light: lighten($primary-shade, 80%);
 $primary-dark: darken($primary-shade, 12%);
 $accent-shade: #418fde;
 $accent-light: lighten($accent-shade, 80%);
-$accent-dark: darken($accent-shade, 12%);
+$accent-dark: darken($accent-shade, 21%);
 // Reassign color vars to semantic color scheme
 $red: #dc3545;
 $yellow: #ffb81c;
@@ -31,7 +31,7 @@ $inverse-bg: $primary-shade;
 // Links
 //
 // Style anchor elements.
-$link-color: #1B5998;
+$link-color: $accent-dark;
 $link-decoration: none;
 $link-hover-color: darken($link-color, 5%);
 $link-hover-decoration: underline;
