POWR-289 small changes to homepage sizing and layout

--- a/web/themes/custom/cloudy/templates/layout/cloudy-homepage.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/cloudy-homepage.html.twig
@@ -5,18 +5,20 @@
  *
  *
  * Available region variables:
- * - left
- * - right
+ * - actions
+ * - audiences
+ * - topics
  *
  */
 #}
-<div class="cloudy-homepage container">
+<div class="cloudy-homepage">
   <div class="row">
     <div class="col-md-4 p-0">
-      {{ content.left }}
+      {{ content.actions }}
+      {{ content.audiences }}
     </div>
     <div class="col-md-8 p-0">
-      {{ content.right }}
+      {{ content.topics }}
     </div>
   </div>
 </div>
