POWR-289 fix weird compile error

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7703,3 +7703,33 @@ a {
 
 .navbar .navbar-brand img {
   max-height: 50px; }
+
+.cloudy-homepage h3 {
+  font-size: 1.1rem;
+  padding-left: 1.5rem; }
+
+.cloudy-homepage p {
+  font-size: .85rem;
+  padding-left: 1.5rem; }
+
+.fas:before {
+  font-family: FontAwesome;
+  vertical-align: middle; }
+
+.fas:before {
+  font-family: FontAwesome;
+  vertical-align: middle; }
+
+.topic .fas:before {
+  position: absolute;
+  top: 3px;
+  left: 15px; }
+
+.community-action .fas:before,
+.audience .fas:before {
+  font-size: 2rem;
+  padding-right: 1.25rem;
+  color: #6c757d; }
+
+.audience a, .community-action a {
+  color: #1b5a99; }
