POWR-296 Saving my work, do not merge

--- a/web/themes/custom/cloudy/scss/typography.scss
+++ b/web/themes/custom/cloudy/scss/typography.scss
@@ -7,6 +7,9 @@
 /* Font Awesome Icons */
 @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
+/* Bring in Bootstrap mixins for breakpoints */
+@import "node_modules/bootstrap/scss/mixins";
+
 //** Font, line-height, and color for body text, headings, and more.
 $font-family-sans-serif:  "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $font-family-serif:       "Merriweather", Georgia, "Times New Roman", Times, serif !default;
@@ -15,18 +18,36 @@ $font-family-serif:       "Merriweather", Georgia, "Times New Roman", Times, ser
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
 
 $font-family-base:        $font-family-sans-serif !default;
-
 $font-size-base:          1.125rem !default;
+$font-size-mobile:        1rem !default;
+$font-modular-scale-mobile: 1.067;
+html {
+  $font-size-base:          1.125rem !default;
+  $font-modular-scale:      1.125;
+  $font-size-h6:            calc($font-size-base / $font-modular-scale) !default;
+  $font-size-h5:            $font-size-base !default;
+  $font-size-h4:            calc($font-size-base * $font-modular-scale) !default;
+  $font-size-h3:            calc($font-size-h4 * $font-modular-scale) !default;
+  $font-size-h2:            calc($font-size-h3 * $font-modular-scale) !default;
+  $font-size-h1:            calc($font-size-h2 * $font-modular-scale) !default;
+  $font-size-large:         calc($font-size-base * $font-modular-scale) !default;
+  $font-size-small:         calc($font-size-base / $font-modular-scale) !default;
+}
+
+@include media-breakpoint-up(sm) {
+  html {
+    $font-size-h6:            calc($font-size-base / $font-modular-scale) !default;
+    $font-size-h5:            $font-size-base !default;
+    $font-size-h4:            calc($font-size-base * $font-modular-scale) !default;
+    $font-size-h3:            calc($font-size-h4 * $font-modular-scale) !default;
+    $font-size-h2:            calc($font-size-h3 * $font-modular-scale) !default;
+    $font-size-h1:            calc($font-size-h2 * $font-modular-scale) !default;
+    $font-size-large:         calc($font-size-base * $font-modular-scale) !default;
+    $font-size-small:         calc($font-size-base / $font-modular-scale) !default;
+  }
+}
 
 
-$font-size-h6:            calc($font-size-base / 1.125) !default;
-$font-size-h5:            $font-size-base !default;
-$font-size-h4:            calc($font-size-base * 1.125) !default;
-$font-size-h3:            calc($font-size-h4 * 1.125) !default;
-$font-size-h2:            calc($font-size-h3 * 1.125) !default;
-$font-size-h1:            calc($font-size-h2 * 1.125) !default;
-$font-size-large:         calc($font-size-base * 1.125) !default;
-$font-size-small:         calc($font-size-base * 0.85) !default;
 
 
 
