--- a/web/themes/custom/cloudy/scss/variables.scss
+++ b/web/themes/custom/cloudy/scss/variables.scss
@@ -1,5 +1,19 @@
 /* VARIABLES */
 
+// Grid breakpoints
+//
+// Define the minimum dimensions at which your layout will change,
+// adapting to different screen sizes, for use in media queries.
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+) !default;
+
+
 // colors
 $primary-shade: #046a38;
 $primary-light: lighten($primary-shade, 80%);
